@@ -3146,6 +3146,47 @@ const char* MacroEditor[] = {
 "OXXXXXXXXXO.",
 "OOOOOOOOOOO.",
 "............"};
+/* XPM */
+static const char *python[]={
+"32 32 6 1",
+". c None",
+"b c #0000ff",
+"c c #00ff00",
+"# c #808000",
+"d c #ff0000",
+"a c #ffff00",
+"................................",
+".......##.###...................",
+"............##..................",
+"......aa.aaa.#..................",
+"......ab.abb.#..................",
+"......ab.abb.#..................",
+"......aa.aaa.#..................",
+"........#...###.................",
+"....###########.###.............",
+"..#############c.####...........",
+".###########c#ccc.####..........",
+".#.##.####c#ccccc.####..........",
+".#######c#cc..ccc.#####.........",
+".cc#c#c#ccc..c#c.c#####.........",
+".cccccccc...#cc.ccc####.........",
+"..c#c#c#...c#c..##c####.........",
+".....dd...#cc...ccc####.........",
+"....dd..#ccc....#c####..........",
+"...ddc#ccc.....cc#####..........",
+"..ddcccc.....##c#####...........",
+".dd.........ccc#####............",
+"d.d.......##cc#####.............",
+"..d......ccc######..............",
+".......###c######.............#.",
+".......ccc######.####...###..##.",
+"......cccc#####.######.########.",
+"......###c####################..",
+"......cccc###############..cc...",
+"......ccccc#####c#######........",
+".......###ccccc..ccccc..........",
+"........ccc#c...................",
+"................................"};
 
 /* XPM */
 const char* back_pixmap[]={
